manifests/airflow2/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ap-airflow2
  labels:
    app.kubernetes.io/instance: app-aflow
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: airflow
    component.opendatahub.io/name: airflow2
    helm.sh/chart: airflow-10.3.2
    opendatahub.io/component: 'false'
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: $(ACM_ARN)
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/healthcheck-port: '9000'
    alb.ingress.kubernetes.io/healthcheck-path: /health/ready
    alb.ingress.kubernetes.io/success-codes: '200'
spec:
  ingressClassName: mlops-ingress-class
  rules:
  - host: $(AIRFLOW_HOST)
    http:
      paths:
      - backend:
          service:
            name: app-aflow-airflow
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific  
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ap-airflow2
  labels:
    app.kubernetes.io/instance: app-aflow
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: airflow
    component.opendatahub.io/name: airflow2
    helm.sh/chart: airflow-10.3.2
    opendatahub.io/component: 'false'
spec:
  to:
    kind: Service
    name: app-aflow-airflow
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
